# Django-Authentication

server/: db.sqlite3  pyproject.toml
server/accounts/: api.py  serializers.py  urls.py
server/core/: settings.py
server/leads/: models.py  urls.py
server/leads/migrations/: 0001_initial.py  0002_lead_owner.py
