[tool.poetry]
name = "traversy-django-react"
version = "0.1.0"
description = ""
authors = ["TestardR <romain.rtestard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
Django = "^3.1.3"
djangorestframework = "^3.12.2"
django-rest-knox = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
